[package]
name = "zipmove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.5", default-features = false }

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]
